# taskgrid

./: .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml
docs/: api.md
src/ge/: _client.py  _utils.py  config.py  engine.py  heartbeat.py  main.py  poller.py
src/ge/executor/: runner.py  slot.py  venv.py
src/ge/log/: __init__.py
src/ge/ota/: updater.py
src/ge/package/: cache.py  downloader.py
src/ge/web/: app.py
src/ge/web/templates/: dashboard.html  task_detail.html
src/gp/: __init__.py  _version.py  main.py  store.py
src/gs/: app.py  config.py  main.py
src/gs/api/: auth.py  ge.py  packages.py  tasks.py
src/gs/db/: repository.py
src/gs/ge_manager/: __init__.py  heartbeat.py  registry.py  state.py
src/gs/redis_client/: lock.py  state_cache.py
src/gs/result/: collector.py
src/gs/scheduler/: lock_manager.py  priority_queue.py  router.py
src/gs/storage/: file_store.py
src/gs/web/: router.py
src/gs/web/templates/: base.html  dashboard.html  ge_detail.html  ges.html  packages.html  task_detail.html  task_new.html  tasks.html
src/tests/: conftest.py  mock_gs.py  test_cache.py  test_config.py  test_ge_heartbeat.py  test_ge_package.py  test_ge_runner.py  test_gp_store.py  test_gs_repo.py  test_gs_scheduler.py  test_slot.py  test_venv.py
