[project]
name = "taskgrid"
version = "0.1.0"
description = "TaskGrid Distributed Task Execution System"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.0",
    "packaging>=23.0",
]

[project.scripts]
taskgrid-ge = "ge.main:main"
taskgrid-gp = "gp.main:main"
taskgrid-gs = "gs.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ge*", "gp*", "gs*"]

[tool.setuptools.package-data]
ge = ["VERSION"]
gs = ["web/templates/*.html"]

